# wallrs

./: .gitignore  Cargo.toml  README.md  TODO  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: nvx4bqi34353ph50wcjv78zpghkhkgbh-source  wa8lhchql76i6czzvad3bqz6lvnjnbr5-source
.github/: codecov.yml
.github/workflows/: integration.yml  test.yml  tests.yml  wayland_tests.yml  x11_tests.yml
benches/: bench.rs
src/: error.rs  helpers.rs  lib.rs  main.rs  wayland.rs  x11.rs  xorg.rs
src/wayland/: surface.rs
tests/: integration.rs  unit.rs
zig/: Makefile
zig/zig-cache/o/02cd5036546c6edf46ea6f0928a1f56e/: builtin.zig
zig/zig-cache/o/0a6dbe831ccf6e01c524281fa01e14ab/: cimport.h.d
zig/zig-cache/o/17ad9f6e68e0f167f78e7f30434c7a90/: cimport.h
zig/zig-cache/o/3938403f35131e436ca86855ad218feb/: cimport.zig
zig/zig-cache/o/45f220cedb0b92f90a0193c1f9f26f07/: builtin.zig  test
zig/zig-cache/o/4847cb34bd35816eeeda71b95d1de76c/: cimport.h.d
zig/zig-cache/o/63effff00865779e98d42f9d585e4b90/: builtin.zig
zig/zig-cache/o/a58e26d7e06dcaa77aa9f3fe7f5a557e/: builtin.zig  test
zig/zig-cache/o/b962f13b94247fa683ffa521a1acbbe8/: cimport.h
zig/zig-cache/o/da75a1fe4cf63f8f31954bb698245a7f/: cimport.zig
zig/zig-cache/o/e559b9198d6617bdff1710a69d5df46c/: cimport.h  cimport.h.d
zig/zig-cache/o/e66f96efb46b24a1b436e69bb72c8206/: cimport.zig
