[package]
name = "wlrs"
version = "0.2.1"
edition = "2021"
description = "Rust library for managing wallpapers"
license = "MIT"
repository = "https://github.com/unixpariah/wlrs"
readme = "README.md"
authors = ["unixpariah"]
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]

[dependencies]
fast_image_resize = "3.0.3"
image = "0.24.8"
smithay-client-toolkit = { version = "0.16.1", default-features = false, features = ["calloop"] }
xcb = { version = "1.3.0", features = ["shm"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
