[package]
name = "wlrs"
version = "1.0.2"
edition = "2021"
description = "Rust library for managing wallpapers"
license = "MIT"
repository = "https://github.com/unixpariah/wlrs"
readme = "README.md"
authors = ["unixpariah"]
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]

[dependencies]
fast_image_resize = "3.0.3"
image = "0.24.8"
smithay-client-toolkit = { version = "0.18.1", default-features = false, features = ["calloop"] }
wayland-client = "0.31.2"
x11rb = { version = "0.13.0", features = ["randr"] }
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
