[package]
name = "wlrs"
version = "2.0.2"
edition = "2021"
description = "Rust library for managing wallpapers"
license = "MIT"
repository = "https://github.com/unixpariah/wlrs"
readme = "README.md"
authors = ["unixpariah"]
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]

[dependencies]
fast_image_resize = "3.0.3"
image =  "0.24.8"
smithay-client-toolkit = { version = "0.19.1", default-features = false, features = ["calloop"] }
wayland-client = { version = "0.31.2", default-features = false }
x11rb = { version = "0.13.0", features = ["randr"] }
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
